# rustportfolio

./: README.md
blocks-editor/: .gitignore  Cargo.toml
blocks-editor/site/: index.html  index.js  package.json  server.crt  server.key  webpack.config.js
blocks-editor/src/: build1.sh1  lib.rs
blocks-editor/src/blocks/: allblocks.rs  blocks.rs  forwardtask.rs  ifblock.rs  mod.rs  onblock.rs  roundedrect.rs  whileblocks.rs
blocks-editor/src/draw/: CanvasPainter.rs  LayersZone.rs  canvas.rs  detailsPainter.rs  documentstorage.rs  drawPalette.rs  finalUpdator.rs  infoZone.rs  mod.rs  mouse.rs  onclick.rs  testpiet._r_s
blocks-editor/src/main/: collisions.rs  mod.rs  net.rs  netstorage.rs
blocks-editor/src/tests/: mod.rs
blocks-editor/src/types/: color.rs  events.rs  general.rs  layersStorage.rs  messaging.rs  mod.rs  state.rs  storage.rs  updators.rs
blocks-editor/src/utils/: main.rs
concretron/: Cargo.toml  build.rs  dt1  dt2  www
concretron/lib/alsa-0.4.3/: .cargo_vcs_info.json
concretron/lib/alsa-0.4.3/src/: error.rs  pcm.rs
concretron/lib/sample-0.7.1/: Cargo.toml
concretron/lib/sample-0.7.1/src/: window.rs
concretron/src/: analys.rs  main.rs
orao-fastgateway/: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  ddd.json  entrypoint.sh  genarr.js  index.js  package-lock.json  package.json  swagger.yaml  testarr.json  tmpo
orao-fastgateway/solidity/: IOraoInfo.sol  Plasm_OraoInfo.sol  Plasm_OraoInfo_sol_OraoInfo.abi  ProviderInfo_sol_ProviderInfo.abi
orao-fastgateway/src/: addhandler.rs  calculate.rs  data.rs  db.rs  db2.rs  error.rs  handler.rs  main.rs  old.rs  routes.rs  service.rs  tron.rs  web3.rs  web3_eth.rs  web3_plasm.rs
orao-fastgateway/trongateway/: tronbox-config.js  tronbox.js
orao-fastgateway/trongateway/contracts/: IOraoInfo.sol  OraoInfo.sol
orao-fastgateway/trongateway/migrations/: 2_deploy_contracts.js
orao-fastgateway/trongateway/test/: package.json  tst.js
