[package]
name = "blockseditor"
version = "0.1.0"
authors = ["Andrey Zienko zzeeee@gmail.com"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/zzeeee/hahaam"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures="0.4.30"
js-sys="0.3.57"

console_error_panic_hook="0.1.7"
ndarray="0.15.4"
getrandom = { version = "0.2", features = ["js"] }
rand="0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
futures-signals = "0.3.20"
futures = { version = "0.3.*" }
crossbeam-channel = "0.5.5"
closure = "0.3.0"
data-encoding = "2.3.2"
[dependencies.web-sys]
version = "0.3.57"
features = [
  'Document',
  'OffscreenCanvas',
  'Element',
  'NodeList',
  'HtmlElement',
  'console',
  'CanvasRenderingContext2d',
  'WebGlRenderingContext',
  'ImageBitmapRenderingContext',
  'HtmlImageElement',
  'SvgImageElement',
  'CanvasPattern',
  'CssStyleDeclaration',
  'ImageData',
  'Path2d',
  'HtmlCanvasElement',
  'Node',
  'Window',
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  'Headers',
  'Request',

  'RequestInit',
  'RequestMode',
  'Response',
  'MouseEvent',
  'Performance',
  'WheelEvent',
  'KeyboardEvent',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'HtmlTextAreaElement',
  'Window',
  'Worker',
  'WebSocket'
]

[profile.release]
lto = true
#debug = true
opt-level = 's'

#[build]
#rustflags = ["-C", "target-feature=+atomics,+bulk-memory,+mutable-globals"]

#[target.wasm32-unknown-unknown.dependencies]

#[target.wasm32-unknown-unknown.dependencies]
#parking_lot = { version = "0.11.0", features = ["wasm-bindgen"] }

