[package]
name = "rust2"
version = "0.1.0"
authors = ["andrejzienko <zzeeee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"

time = "0.1"
jack = "0.6.5"
dft="0.5.5"
crossbeam-channel="0.5.0"
microfft = "0.3.1"
num-traits="0.2.14"
num-complex="0.2.4"
rand="0.6.5"
arrayfire="3.8.0"
rustfft="5.0.1"