[package]
name = "orao_fast_gateway"
version = "0.1.0"
authors = ["andrejzienko <zzeeee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#warp = "0.3.1"
#tokio = { version = "1", features = ["full"] }
#tokio = { version = "0.2", features = ["full"] }
#warp = "0.2"
#mobc-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
#mobc = "0.7.2"
serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
bytes="1.0"
#parking_lot = "0.10.0"
serde-big-array = "0.3.1"
#sp-core = { version = "2.0.0", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
## to convert binary in hexdecimal format
hex = "0.4.3" 
warp-reverse-proxy="0.3.1"

reqwest = { version = "0.11", features = ["json"] }
web3 = "0.15.0"
secp256k1="0.20.1"
futures="0.3.14"
tokio = { version = "0.2.25", features = ["full","sync"] }
tokio-stream=""
warp = "0.2"
mobc-postgres = { version = "0.5", features = ["with-chrono-0_4"] }
tokio-postgres = {version="0.5.5",features=["with-serde_json-1","with-time-0_2"]}
#wasmtime-runtime ="0.26.0"
#wasmtime="0.26.0"
anyhow="1.0.40"
mobc = "0.5"
tracing-subscriber = "0.2"
tracing = "0.1"

#async-std={version="1.7.0",features = ["tokio02"]}

 #web3_etz="0.8.0"